--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -895,6 +895,127 @@ main[data-book_details] section>footer {
   display: none;
 }
 
+/* Modify book page */
+
+main[data-book_modify] {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+main[data-book_modify] h1{
+  color: #801524;
+  font-size: 32px;
+  text-decoration: underline;
+  font-weight: bold;
+  text-align: center;
+}
+
+main[data-book_modify] section{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main[data-book_modify] section form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+main[data-book_modify] section form ul {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0;
+  padding: 10px;
+}
+
+
+
+main[data-book_modify] section form ul li {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  border: 2px solid #801524;
+  border-radius: 10px;
+}
+
+main[data-book_modify] section form ul li label {
+  width: 30%;
+  background-color: #801524;
+  border-radius: 7px 0 0 7px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+main[data-book_modify] section form ul li input,
+main[data-book_modify] section form ul li textarea,
+main[data-book_modify] section form ul li select {
+  width: 70%;
+  text-align: center;
+  border: none;
+  border-radius: 0 10px 10px 0;
+  padding: 5px;
+  outline: none;
+}
+
+main[data-book_modify] section form ul li textarea {
+  resize: none;
+  height: 60px;
+}
+
+
+main[data-book_modify] section>form>input {
+  margin: 5px;
+  color: #801524;
+  cursor: pointer;
+  border: none;
+  font-weight: normal;
+  background-color: white;
+  text-decoration: underline;
+}
+
+main[data-book_modify] section form fieldset {
+  width: 70%;
+}
+
+main[data-book_modify] section form fieldset ul{
+  flex-direction: row;
+}
+
+main[data-book_modify] section form fieldset ul li label {
+  width: 80%;
+  background-color: #801524;
+  border-radius: 7px 0 0 7px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+main[data-book_modify] section form ul li input[type="checkbox"] {
+  width: 20%;
+  text-align: center;
+  border: none;
+  border-radius: 0 10px 10px 0;
+  padding: 5px;
+  outline: none;
+}
+
+
 
 /* Mobile version styles */
 @media (width <=768px) {
@@ -1052,5 +1173,9 @@ main[data-book_details] section>footer {
   main[data-cart] section>input[type="button"]:hover {
     display: flex;
     background-color: #a3111a;
+  }
+
+  main[data-book_modify] section{
+    width: 100%;
   }
 }
