Added CSS for Orders page

--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1184,7 +1184,81 @@ main[data-book_modify] section form ul li input[type="checkbox"] {
   outline: none;
 }
 
+/* User orders page */
 
+main[data-orders]{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
+main[data-orders] section{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  justify-items: center;
+}
+
+main[data-orders] h1{
+  color: #801524;
+  font-size: 32px;
+  text-decoration: underline;
+  font-weight: bold;
+  text-align: center;
+}
+
+main[data-orders] section > article {
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #d9d9d9;
+  color: #801524;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 20px;
+}
+
+main[data-orders] section > article span{
+  font-weight: bold;
+}
+
+main[data-orders] section > article > header{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 2px #801524 solid;
+  padding-bottom: 10px;
+}
+
+main[data-orders] section > article > footer{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 2px #801524 solid;
+  padding-top: 10px;
+}
+
+main[data-orders] section > article > footer > input{
+  padding: 5px;
+  background-color: #801524;
+  color: white;
+  border-radius: 10px;
+  border: none;
+}
+
+main[data-orders] section > article > footer > input:hover{
+  background-color: #8e1017;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 /* Mobile version styles */
 @media (width <=768px) {
